# databend

./: Cargo.toml
src/binaries/: Cargo.toml
src/query/ee/: Cargo.toml
src/query/ee/tests/it/inverted_index/: pruning.rs
src/query/service/: Cargo.toml
src/query/service/src/interpreters/: interpreter_index_refresh.rs
src/query/service/src/interpreters/hook/: refresh_hook.rs
src/query/service/tests/it/storages/fuse/: pruning.rs
src/query/sql/src/planner/binder/: project.rs
src/query/sql/src/planner/binder/ddl/: index.rs
src/query/sql/src/planner/optimizer/: optimizer.rs
src/query/sql/src/planner/plans/ddl/: index.rs
src/query/sql/src/planner/semantic/: aggregating_index_visitor.rs  mod.rs
src/query/storages/common/uwheel_optimizer/: Cargo.toml
src/query/storages/common/uwheel_optimizer/src/: builder.rs  expr.rs  lib.rs  uwheel_optimizer.rs  wheels.rs
src/query/storages/common/uwheel_optimizer/src/aggregator/: mod.rs
src/query/storages/common/uwheel_optimizer/src/index/: mod.rs
src/query/storages/fuse/: Cargo.toml
src/query/storages/fuse/src/operations/: agg_index_sink.rs
