[package]
name = "databend-storages-common-uwheel-optimizer"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false
test = true

[dependencies]
arrow-array = { workspace = true }
bitpacking = { workspace = true }
chrono = { workspace = true }
datafusion = { workspace = true }
tokio = { workspace = true }
uwheel = { workspace = true }
